--- a/themes/vno/layout/_partial/post/share_jia.ejs
+++ b/themes/vno/layout/_partial/post/share_jia.ejs
@@ -1,7 +1,7 @@
 <div class="share_jia">
 	<!-- JiaThis Button BEGIN -->
 	<div class="jiathis_style">
-		<span class="jiathis_txt"><%= __('post.share') %>: &nbsp;  asfad</span>
+		<span class="jiathis_txt"><%= __('post.share') %>: &nbsp; </span>
 		<a class="jiathis_button_facebook"></a> 
     <a class="jiathis_button_twitter"></a>
     <a class="jiathis_button_plus"></a> 
