--- a/themes/vno/layout/_partial/footer.ejs
+++ b/themes/vno/layout/_partial/footer.ejs
@@ -5,8 +5,10 @@
     		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
     	</div>
       	<div class="footer-right">
-      		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
-      	</div>
+      		<!--<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten-->
+			<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme bruce-light by bruce
+
+		</div>
     </div>
   </div>
 </footer>
