--- a/themes/vno/layout/_partial/left-col-vno.ejs
+++ b/themes/vno/layout/_partial/left-col-vno.ejs
@@ -27,9 +27,8 @@
 					<div>
 						<nav class="cover-navigation cover-navigation--primary">
 							<ul class="navigation">
-								<li class="navigation__item"><a href="/#blog" title="<%=theme.blog_button.description%>" class="blog-button"><%=theme.blog_button.title%></a></li>
 								<% for( item in theme.nav){ %>
-								<li class="navigation__item"><a href="<%=theme.nav[item].url%>" target="_blank" title="<%=theme.nav[item].description%>"><%=theme.nav[item].title%></a></li>
+								<li class="navigation__item"><a href="<%- url_for(theme.nav[item].url) %>" target="_blank" title="<%=theme.nav[item].description%>"><%=theme.nav[item].title%></a></li>
 								<% } %>
 							</ul>
 						</nav>
