udpate left col

--- a/themes/vno/layout/_partial/left-col-vno.ejs
+++ b/themes/vno/layout/_partial/left-col-vno.ejs
@@ -30,6 +30,10 @@
 								<% for( item in theme.nav){ %>
 								<li class="navigation__item"><a href="<%- url_for(theme.nav[item].url) %>" target="_blank" title="<%=theme.nav[item].description%>"><%=theme.nav[item].title%></a></li>
 								<% } %>
+
+								<li class="navigation__item"><a href="http://old.brusport.com/" target="_blank" title="old website%>">old site</a></li>
+
+
 							</ul>
 						</nav>
 					</div>
