--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -4,7 +4,7 @@
 
 // Placeholder: $code-block
 $code-block {
-  overflow: auto;
+  overflow: scroll;
   margin: 20px 0;
   padding: 15px;
   font-size $code-font-size;
