--- a/themes/vno/source/css/vno/media-queries.styl
+++ b/themes/vno/source/css/vno/media-queries.styl
@@ -39,6 +39,19 @@
 @media all and (max-width: 960px){
 .btn-mobile-menu{
   display: block
+  .fa-list{
+    &:before{
+      content: "\f03a";
+      color: #999;
+      font: 17px FontAwesome;
+    }
+  }
+    .fa-angle-up{
+      &:before{
+        content: "\f106";
+        font: 17px FontAwesome;
+      }
+    }
 }
 
 .panel-main{
